整理服务代码生成接口
