# controllers/nC_Build.go
@@ -13,8 +13,19 @@ type BuildController struct {
 // @Description 创建
 // @Success 200 编译成功
 // @Failure 403 body is empty
-// @router /create [Post]
-func (c *BuildController) Create() { c.CreateWithModel(&models.NC_Build{}) }
+// @router /buildServlet [Post]
+func (c *BuildController) BuildServlet() {
+
+	build := models.NC_Build{}
+	err := json.Unmarshal(c.Ctx.Input.RequestBody, &build)
+
+	if c.handlerErrOK(err) {
+		models.NCDB.Create(&build)
+
+		build.BuildServlet()
+		c.responseSuccess(map[string]interface{}{"model": &build})
+	}
+}
 
 // @Title	GetMany
 // @Description 查询多个
@@ -48,14 +59,17 @@ func (c *BuildController) GetDemo() {
 // @Success 200 编译成功
 // @Failure 403 body is empty
 // @router /buildForm [Post]
-func (c *BuildController) BuildForm() {
-	form := models.NC_Form{}
-	err := json.Unmarshal(c.Ctx.Input.RequestBody, &form)
-	if c.handlerErrOK(err) {
-		form.BuildForm()
-		c.responseSuccess(map[string]interface{}{"model": form})
-	}
-}
+//func (c *BuildController) BuildForm() {
+//	form := models.NC_Form{}
+//	err := json.Unmarshal(c.Ctx.Input.RequestBody, &form)
+//	if c.handlerErrOK(err) {
+//		servlet := models.NC_Servlet{}
+//		servlet.ID = form.ServletId
+//		models.NCDB.Debug().First(&servlet)
+//		form.BuildForm(servlet.GetName())
+//		c.responseSuccess(map[string]interface{}{"model": form})
+//	}
+//}
 
 // @Title	BuildModelsGo
 // @Description 构建服务models.go源码
@@ -63,22 +77,22 @@ func (c *BuildController) BuildForm() {
 // @Success 200 编译成功
 // @Failure 403 body is empty
 // @router /buildModelsGo [Post]
-func (c *BuildController) BuildModelsGo() {
-	servlet := models.NC_Servlet{}
-	err := json.Unmarshal(c.Ctx.Input.RequestBody, &servlet)
-	if c.handlerErrOK(err) {
-		success, desc := servlet.BuildModels()
-		if success {
-			c.responseSuccess(map[string]interface{}{"model": servlet})
-		} else {
-			res := make(map[string]interface{})
-			res["status"] = "failure"
-			res["description"] = desc
-			c.Data["json"] = res
-			c.ServeJSON()
-		}
-	}
-}
+//func (c *BuildController) BuildModelsGo() {
+//	servlet := models.NC_Servlet{}
+//	err := json.Unmarshal(c.Ctx.Input.RequestBody, &servlet)
+//	if c.handlerErrOK(err) {
+//		success, desc := servlet.BuildModels()
+//		if success {
+//			c.responseSuccess(map[string]interface{}{"model": servlet})
+//		} else {
+//			res := make(map[string]interface{})
+//			res["status"] = "failure"
+//			res["description"] = desc
+//			c.Data["json"] = res
+//			c.ServeJSON()
+//		}
+//	}
+//}
 
 // @Title	BuildRouterGo
 // @Description 构建服务router.go源码
@@ -86,14 +100,14 @@ func (c *BuildController) BuildModelsGo() {
 // @Success 200 编译成功
 // @Failure 403 body is empty
 // @router /buildRouterGo [Post]
-func (c *BuildController) BuildRouterGo() {
-	servlet := models.NC_Servlet{}
-	err := json.Unmarshal(c.Ctx.Input.RequestBody, &servlet)
-	if c.handlerErrOK(err) {
-		servlet.BuildRouter()
-		c.responseSuccess(map[string]interface{}{"model": servlet})
-	}
-}
+//func (c *BuildController) BuildRouterGo() {
+//	servlet := models.NC_Servlet{}
+//	err := json.Unmarshal(c.Ctx.Input.RequestBody, &servlet)
+//	if c.handlerErrOK(err) {
+//		servlet.BuildRouter(strconv.Itoa(int(time.Now().Unix())),"专门发布")
+//		c.responseSuccess(map[string]interface{}{"model": servlet})
+//	}
+//}
 
 // @Title	BuildForms
 // @Description 构建服务所有form源码
@@ -107,7 +121,7 @@ func (c *BuildController) BuildForms() {
 		models.NCDB.Debug().First(&servlet)
 		models.NCDB.Debug().Model(&servlet).Related(&servlet.Forms, "ServletId")
 		for _, form := range servlet.Forms {
-			form.BuildForm()
+			form.BuildForm(servlet.GetName())
 		}
 		c.responseSuccess(map[string]interface{}{"model": servlet})
 	}
@@ -122,25 +136,28 @@ func (c *BuildController) BuildLogic() {
 	logic := models.NC_Logic{}
 	err := json.Unmarshal(c.Ctx.Input.RequestBody, &logic)
 	if c.handlerErrOK(err) {
-		logic.BuildLogic()
+		servlet := models.NC_Servlet{}
+		servlet.ID = logic.ServletId
+		models.NCDB.Debug().First(&servlet)
+		logic.BuildLogic(servlet.GetName())
 		c.responseSuccess(map[string]interface{}{"model": logic})
 	}
 }
 
-// @Title	BuildServlet
-// @Description 构建服务源码
-// @Param	name	string	true	"表单名称"
-// @Success 200 编译成功
-// @Failure 403 body is empty
-// @router /buildServlet [Post]
-func (c *BuildController) BuildServlet() {
-	//form := models.NC_Servlet{}
-	//err := json.Unmarshal(c.Ctx.Input.RequestBody, &form)
-	//if c.handlerErrOK(err) {
-	//	form.Build()
-	//	c.responseSuccess(map[string]interface{}{"models": form})
-	//}
-}
+//// @Title	BuildServlet
+//// @Description 构建服务源码
+//// @Param	name	string	true	"表单名称"
+//// @Success 200 编译成功
+//// @Failure 403 body is empty
+//// @router /buildServlet [Post]
+//func (c *BuildController) BuildServlet() {
+//	servlet := models.NC_Servlet{}
+//	err := json.Unmarshal(c.Ctx.Input.RequestBody, &servlet)
+//	if c.handlerErrOK(err) {
+//		servlet.BuildServlet()
+//		c.responseSuccess(map[string]interface{}{"models": servlet})
+//	}
+//}
 
 // @Title	TestStruct
 // @Description 测试结构
